[package]
name = "gpodrs"
version = "0.1.0"
edition = "2021"
authors = ["shua <shua@isthisa.email>"]

[[bin]]
name = "gpodrs"
path = "gpodrs.rs"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.21.2"
femme = "2.2.1"
log = "0.4.20"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tide = "0.16.0"
time = { version = "0.3.36", features = ["formatting", "parsing"] }

